<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="android.lalita.com.idewaayulalitamarmika_1202154355_modul2.TakeAway">

    <TextView
        android:id="@+id/identitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/identitas_pemesanan"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/editNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/alamat"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/catatan"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/pilihPesanan"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/pilih_pesanan"
            android:onClick="pilihPesanan"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
