<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="android.lalita.com.idewaayulalitamarmika_1202154355_modul2.DineIn">

    <TextView
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/detail_customer"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editNama2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nama" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="45dp"
        android:paddingRight="45dp">

        <TextView
            android:id="@+id/meja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:text="@string/no_meja"
            android:textColor="@color/colorAccent"
            android:textSize="17dp" />

        <Spinner
            android:id="@+id/spin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:entries="@array/meja">
        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/pilihPesanan2"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="pilihPesanan2"
        android:text="@string/pilih_pesanan"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold" />
</LinearLayout>
