<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="android.lalita.com.idewaayulalitamarmika_1202154355_modul2.MenuUtama">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:src="@drawable/zoo" />

    <TextView
        android:id="@+id/pilihMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:singleLine="true"
        android:text="@string/pilih_menu"
        android:textAlignment="center"
        android:textColor="#21395e"
        android:textSize="28dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/radiogr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/dine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/dine_in"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/take"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/take_out"
                android:textSize="15dp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/buttonPesan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/pesan"
        android:onClick="Pesan"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>
